--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,33 @@
 }
 
 .page {
-    max-width: 1280px;
+    max-width: 1280vw;
     margin: 0 auto;
     background-color: #2A2C2F;
     font-family: "Inter";
     color: #FFFFFF;
+}
+
+.header {
+    margin: 0 auto 0;
+    padding: 34px 0 0 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.logo {
+    margin: 0;
+    padding: 0;
+    max-width: 190px;
+}
+
+.header__lang-link {
+    align-items: center;
+    margin: 0 18px 0 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 24px;
+    line-height: 28px;
 }
