--- a/styles/style.css
+++ b/styles/style.css
@@ -12,25 +12,22 @@
 }
 
 .header {
-    margin: 0 auto 0;
+    margin: 0;
     padding: 34px 0 0 0;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
 }
 
-.logo {
+.header__logo {
     margin: 0;
     padding: 0;
-    max-width: 190px;
+    width: 32px;
+    height: 32px;
 }
 
-.header__lang-link {
-    align-items: center;
-    margin: 0 18px 0 0;
+.header__title {
+    margin: 20px 0 0 0;
     padding: 0;
-    list-style: none;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 24px;
-    line-height: 28px;
+    font-weight: bold;
 }
