--- a/styles/style.css
+++ b/styles/style.css
@@ -31,3 +31,36 @@
     padding: 0;
     font-weight: bold;
 }
+
+.lead {
+    margin: 92px auto 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.lead__title {
+    margin: 0;
+    padding: 0;
+    width: 793px;
+    font-size: 96px;
+    text-align: center;
+}
+
+.lead__subtitle {
+    margin: 32px 0 64px 0;
+    padding: 0;
+    width: 720px;
+    font-size: 30px;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+}
+
+.lead__image {
+    margin: 0;
+    padding: 0;
+    width: 984px;
+    height: 615px;
+}
