--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 }
 
 .page {
-    max-width: 1280vw;
+    max-width: 1280vmax;
     margin: 0 auto;
     background-color: #2A2C2F;
     font-family: "Inter";
@@ -61,6 +61,45 @@
 .lead__image {
     margin: 0;
     padding: 0;
-    width: 984px;
-    height: 615px;
+    width: calc(100% - 984px);
+}
+
+.intro {
+    margin: 92px 0 0 0;
+    padding: 0;
+    width: 785px;
+    
+}
+
+.intro__title {
+    margin: 0;
+    padding: 0;
+    grid-column: 2;
+    font-size: 54px;
+}
+
+.intro__text {
+    margin: 0;
+    padding: 0;
+    width: 690px;
+    grid-column: 2;
+    font-weight: normal;
+    font-style: normal;
+    line-height: 1.5;
+}
+
+.intro__text:nth-of-type(1) {
+    margin: 40px 0 0 0;
+    font-size: 24px;
+}
+
+.intro__text:nth-last-of-type(2) {
+    margin: 10px 0 0 0;
+    text-align: right;
+    font-size: 24px;
+}
+
+.intro__text:last-child {
+    margin: 32px 0 0 0;
+    font-size: 16px;
 }
