--- a/styles/style.css
+++ b/styles/style.css
@@ -1,105 +1,102 @@
 @font-face {
-    font-family: "Inter";
-    src: url(/Inter-Web/inter.css);
+  font-family: "Inter";
+  src: url(/Inter-Web/inter.css);
 }
 
 .page {
-    max-width: 1280vmax;
-    margin: 0 auto;
-    background-color: #2A2C2F;
-    font-family: "Inter";
-    color: #FFFFFF;
+  max-width: 1280vmax;
+  margin: 0 auto;
+  background-color: #2a2c2f;
+  font-family: "Inter";
+  color: #ffffff;
 }
 
 .header {
-    margin: 0;
-    padding: 34px 0 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 0;
+  padding: 34px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .header__logo {
-    margin: 0;
-    padding: 0;
-    width: 32px;
-    height: 32px;
+  margin: 0;
+  padding: 0;
+  width: 32px;
+  height: 32px;
 }
 
 .header__title {
-    margin: 20px 0 0 0;
-    padding: 0;
-    font-weight: bold;
+  margin: 20px 0 0 0;
+  padding: 0;
+  font-weight: bold;
 }
 
 .lead {
-    margin: 92px auto 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin: 92px auto 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .lead__title {
-    margin: 0;
-    padding: 0;
-    width: 793px;
-    font-size: 96px;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 793px;
+  font-size: 96px;
+  text-align: center;
 }
 
 .lead__subtitle {
-    margin: 32px 0 64px 0;
-    padding: 0;
-    width: 720px;
-    font-size: 30px;
-    text-align: center;
-    font-style: normal;
-    font-weight: normal;
+  margin: 32px 0 64px 0;
+  padding: 0;
+  width: 720px;
+  font-size: 30px;
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .lead__image {
-    margin: 0;
-    padding: 0;
-    width: calc(100% - 984px);
+  margin: 0;
+  padding: 0;
+  width: calc(100% - 984px);
 }
 
 .intro {
-    margin: 92px 0 0 0;
-    padding: 0;
-    width: 785px;
-    
+  margin: 92px 0 0 0;
+  padding: 0;
 }
 
 .intro__title {
-    margin: 0;
-    padding: 0;
-    grid-column: 2;
-    font-size: 54px;
+  width: 785px;
+  margin: 0;
+  padding: 0;
+  font-size: 54px;
 }
 
 .intro__text {
-    margin: 0;
-    padding: 0;
-    width: 690px;
-    grid-column: 2;
-    font-weight: normal;
-    font-style: normal;
-    line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  width: 690px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.5;
 }
 
 .intro__text:nth-of-type(1) {
-    margin: 40px 0 0 0;
-    font-size: 24px;
+  margin: 40px 0 0 0;
+  font-size: 24px;
 }
 
 .intro__text:nth-last-of-type(2) {
-    margin: 10px 0 0 0;
-    text-align: right;
-    font-size: 24px;
+  margin: 10px 0 0 0;
+  text-align: right;
+  font-size: 24px;
 }
 
 .intro__text:last-child {
-    margin: 32px 0 0 0;
-    font-size: 16px;
+  margin: 32px 0 0 0;
+  font-size: 16px;
 }
