--- a/styles/style.css
+++ b/styles/style.css
@@ -127,3 +127,43 @@
 .photo-grid__item {
   max-width: 284px;
 }
+
+.button {
+
+}
+
+.places {
+
+}
+
+.place {
+
+}
+
+.place__title {
+
+}
+
+.place__image {
+
+}
+
+.place__button {
+
+}
+
+.place__website {
+
+}
+
+.place__url-heading {
+
+}
+
+.place__link {
+
+}
+
+.place__paragraph {
+  
+}
