Places CSS font styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -129,41 +129,73 @@
 }
 
 .button {
-
+  padding: 13px 20px;
+  background: #0278FE;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .places {
-
+  margin: 0 auto 0;
+  padding: 0;
+  max-width: 984px;
 }
 
 .place {
-
+  margin: 0;
+  padding: 0;
+  display: grid;
 }
 
 .place__title {
-
+  margin: 0;
+  padding: 0;
+  max-width: 460px;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 76px;
 }
 
 .place__image {
-
+  max-width: 460px;
 }
 
 .place__button {
-
+  max-width: 248px;
+  margin: 48px 0 0 0;
+  text-align: center;
 }
 
 .place__website {
-
+  margin: 0;
+  padding: 0;
+  width: 456px;
 }
 
 .place__url-heading {
-
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  color: #AAAAAA;
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 400;
 }
 
 .place__link {
-
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 400;
 }
 
 .place__paragraph {
-  
+  margin: 25px 0 0;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 29px;
 }
