--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,7 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .lead__image {
@@ -96,7 +95,7 @@
   margin: 40px 0 0 0;
   font-size: 24px;
   line-height: 34px;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 .intro__text:nth-last-of-type(2) {
@@ -104,8 +103,7 @@
   text-align: right;
   font-size: 24px;
   line-height: 34px;
-  font-weight: 400px;
-
+  font-weight: 400;
 }
 
 .intro__text:last-child {
@@ -130,7 +128,7 @@
 
 .button {
   padding: 13px 20px;
-  background: #0278FE;
+  background: #0278fe;
   color: #ffffff;
   text-decoration: none;
 }
@@ -195,7 +193,7 @@
   margin: 0;
   padding: 0;
   text-transform: uppercase;
-  color: #AAAAAA;
+  color: #aaaaaa;
   font-size: 12px;
   line-height: 14px;
   font-weight: 400;
