--- a/styles/style.css
+++ b/styles/style.css
@@ -218,3 +218,54 @@
   line-height: 29px;
   grid-row: span 3;
 }
+
+.cover {
+  max-width: 1184px;
+  margin: 92px auto 0;
+}
+
+.cover__background {
+  background-image: url(/images/__background\ 4.jpg);
+  background-repeat: no-repeat;
+  background-size: 1184px 740px;
+}
+
+.cover__group {
+  margin: 0 auto;
+  padding: 243px 0;
+  max-width: 656px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.cover__title {
+  margin: 0;
+  padding: 0;
+  width: 656px;
+  grid-row: 1;
+  grid-column: 2;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 76px;
+
+}
+
+.cover__subtitle {
+  margin: 32px auto;
+  padding: 0;
+  width: 320px;
+  grid-row: 2;
+  grid-column: 2;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.cover__button {
+  margin: 32px auto;
+  grid-row: 3;
+  grid-column: 2;
+  max-width: 137px;
+  margin: 0 auto;
+}
