--- a/styles/style.css
+++ b/styles/style.css
@@ -280,3 +280,18 @@
   max-width: 137px;
   margin: 0 auto;
 }
+
+.footer {
+  margin: 92px 0 0 0;
+  padding: 0 0 24px 0;
+}
+
+.footer__copyright {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+}
