--- a/styles/style.css
+++ b/styles/style.css
@@ -233,12 +233,12 @@
 }
 
 .cover__background::before {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #2A2C2F;
-  opacity: .3;
+  background-color: #2a2c2f;
+  opacity: 0.3;
   z-index: -1;
 }
 
@@ -260,7 +260,6 @@
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
-
 }
 
 .cover__subtitle {
