--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -14,4 +14,11 @@
     background-color: #2a2c2f;
     opacity: 0.3;
     z-index: -1;
+    
+    transition: .2s;
+    transition-timing-function: ease-out;
+  }
+  
+  .cover__background:hover::before {
+    opacity: .8;
   }
