--- a/styles/style.css
+++ b/styles/style.css
@@ -127,6 +127,7 @@
 }
 
 .button {
+  margin: 0;
   padding: 13px 20px;
   background: #0278fe;
   color: #ffffff;
@@ -143,14 +144,12 @@
   margin: 80px 0 0 0;
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 48px 40px;
   grid-template-areas: 
   "title website"
   "image paragraph"
   "image paragraph"
-  "button paragraph";
-
+  "button .";
 }
 
 .place:first-child {
@@ -168,8 +167,10 @@
 }
 
 .place__image {
+  margin: 0;
+  padding: 0;
   max-width: 460px;
-  grid-column: 1;
+  grid-column: span 1;
   grid-area: image;
 }
 
@@ -226,6 +227,8 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 29px;
+  grid-row: span 3;
+  grid-area: paragraph;
 }
 
 .place__paragraph {
