--- a/blocks/place/__button/place__button.css
+++ b/blocks/place/__button/place__button.css
@@ -1,7 +1,14 @@
 .place__button {
-    max-width: 248px;
-    margin: 0;
-    text-align: center;
-    grid-column: 1;
-    grid-row: 3;
-  }
+  max-width: 248px;
+  margin: 0;
+  text-align: center;
+  grid-column: 1;
+  grid-row: 3;
+  grid-area: button;
+}
+
+.place__button:hover {
+  background-color: #0063D2;
+  transition: .2s;
+  transition-timing-function: ease-out;
+}
