--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,9 +1,4 @@
 .place__paragraph {
-    width: 484px;
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 29px;
-    grid-row: span 3;
-  }
+  margin: 0 0 25px 0;
+  grid-area: paragraph;
+}
