--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,9 @@
 .place__title {
-    margin: 0;
-    padding: 0;
-    max-width: 460px;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-  }
+  margin: 0;
+  padding: 0;
+  max-width: 460px;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 76px;
+  grid-area: title;
+}
