--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,10 +1,11 @@
 .place__website {
-    margin: 0;
-    padding: 0;
-    width: 456px;
-    grid-row: 1;
-    grid-column: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
+  margin: 0;
+  padding: 0;
+  width: 456px;
+  grid-row: 1;
+  grid-column: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  grid-area: website;
+}
