--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,11 +1,15 @@
 .place {
-    margin: 80px 0 0 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 48px 40px;
-  }
-  
-  .place:first-child {
-    margin: 92px 0 0 0;
-  }
+  margin: 80px 0 0 0;
+  padding: 0;
+  display: grid;
+  grid-gap: 48px 40px;
+  grid-template-areas: 
+  "title website"
+  "image paragraph"
+  "image paragraph"
+  "button .";
+}
+
+.place:first-child {
+  margin: 92px 0 0 0;
+}
