--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   max-width: 460px;
-  grid-column: span 1;
+  grid-column: 1;
+  grid-row: 2;
   grid-area: image;
 }
 
