--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,9 +3,9 @@
   padding: 0;
   width: 456px;
   grid-row: 1;
-  grid-column: 2;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  grid-area: website;
+  grid-area: header;
+  grid-column: 2;
 }
