--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,24 +1,24 @@
 .cover__background {
-    background-image: url(/images/__background\ 4.jpg);
-    background-repeat: no-repeat;
-    background-size: 1184px 740px;
-    position: relative;
-    z-index: 0;
-  }
-  
-  .cover__background::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #2a2c2f;
-    opacity: 0.3;
-    z-index: -1;
-    
-    transition: .2s;
-    transition-timing-function: ease-out;
-  }
-  
-  .cover__background:hover::before {
-    opacity: .8;
-  }
+  background-image: url(images/__background.jpg);
+  background-repeat: no-repeat;
+  background-size: 1184px 740px;
+  position: relative;
+  z-index: 0;
+}
+
+.cover__background::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #2a2c2f;
+  opacity: 0.3;
+  z-index: -1;
+
+  transition: .2s;
+  transition-timing-function: ease-out;
+}
+
+.cover__background:hover::before {
+  opacity: .8;
+}
