--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,5 @@
 .cover__background {
-  background-image: url(images/__background.jpg);
+  background-image: url(../../../images/background.jpg);
   background-repeat: no-repeat;
   background-size: 1184px 740px;
   position: relative;
