--- a/pages/index.css
+++ b/pages/index.css
@@ -36,6 +36,7 @@
 @import url(../blocks/cover/__group/cover__group.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__text/cover__text.css);
 @import url(../blocks/cover/__button/cover__button.css);
 
 @import url(../blocks/footer/footer.css);
