--- a/pages/index.css
+++ b/pages/index.css
@@ -41,3 +41,5 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+@import url(../media-queries/media-queries.css);
