320 CSS cover background fix

--- a/media-queries/__320/media-queries__320.css
+++ b/media-queries/__320/media-queries__320.css
@@ -101,3 +101,16 @@
     .place__button {
         max-width: 288px;
     }
+
+    .cover {
+        max-width: 321px;
+        height: 254px;
+    }
+
+    .cover__background {
+        background-size: 320px 254px;
+    }
+
+    
+
+}
