--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -4,3 +4,9 @@
     color: #ffffff;
     text-decoration: none;
   }
+
+  .button:hover {
+    background-color: #0063D2;
+    transition: .2s;
+    transition-timing-function: ease-out;
+  }
