--- a/media-queries/__320/media-queries__320.css
+++ b/media-queries/__320/media-queries__320.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 320px) {
+    .page {
+        width: 320px;
+    }
+
     .header {
         padding: 20px 0 0 0;
     }
@@ -6,6 +10,11 @@
     .header__logo {
         width: 24px;
         height: 24px;
+    }
+
+    .header__title {
+        font-size: 15px;
+        line-height: 15px;
     }
 
     .lead {
