--- a/pages/index.css
+++ b/pages/index.css
@@ -43,3 +43,5 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../media-queries/media-queries.css);
+@import url(../media-queries/__320/media-queries__320.css);
+@import url(../media-queries/__768/media-queries__768.css);
