--- a/blocks/cover/__button/cover__button.css
+++ b/blocks/cover/__button/cover__button.css
@@ -4,3 +4,10 @@
     max-width: 137px;
     margin: 0 auto;
   }
+
+  @media screen and (max-width: 320px) {
+    .cover__button {
+      grid-row: none;
+      grid-column: none;
+  }
+  }
