--- a/blocks/cover/__group/cover__group.css
+++ b/blocks/cover/__group/cover__group.css
@@ -6,3 +6,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  @media screen and (max-width: 320px) {
+    .cover__group {
+      max-width: 288px;
+      margin: 0 auto;
+      padding: 46px 0 0 0;
+      display: flex;
+      flex-direction: column;
+  }
+  }
