--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,3 +4,12 @@
     grid-row: 2;
     grid-column: 2;
   }
+
+  @media screen and (max-width: 320px) {
+    .cover__subtitle {
+      margin: 16px 0;
+      width: 288px;
+      grid-column: none;
+      grid-row: none;
+  }
+  }
