--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -6,3 +6,12 @@
     font-weight: 400;
     line-height: 22px;
 }
+
+@media screen and (max-width: 320px) {
+    .cover__text {
+        text-align: center;
+        width: 288px;
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
