--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,3 +8,11 @@
     font-weight: 900;
     line-height: 76px;
   }
+  
+  @media screen and (max-width: 320px) {
+    .cover__title {
+      width: 288px;
+      font-size: 32px;
+      line-height: 35px;
+  }
+  }
