--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,3 +2,18 @@
     max-width: 1184px;
     margin: 92px auto 0;
   }
+
+  @media screen and (max-width: 768px) {
+    .cover {
+      margin: 88px auto 0;
+      max-width: 768px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .cover {
+      max-width: 320px;
+      height: 254px;
+      margin: 64px auto 0;
+  }
+  }
