--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,3 +2,15 @@
     margin: 92px 0 0 0;
     padding: 0 0 24px 0;
   }
+
+  @media screen and (max-width: 768px) {
+    .footer {
+      margin: 88px 0 0 0;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .footer {
+      margin: 64px 0 0 0;
+  }
+  }
