--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,3 +4,10 @@
     width: 32px;
     height: 32px;
   }
+
+  @media screen and (max-width: 320px) {
+    .header__logo {
+        width: 24px;
+        height: 24px;
+    }
+  }
