--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,9 @@
     flex-direction: column;
     align-items: center;
   }
+
+  @media screen and (max-width: 320px) {
+    .header {
+        padding: 20px 0 0 0;
+    }
+  }
