--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,17 @@
     font-weight: 900;
     line-height: 58px;
   }
+
+  @media screen and (max-width: 768px) {
+    .intro__title {
+      width: 720px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .intro__title {
+      width: 288px;
+      font-size: 32px;
+      line-height: 35px;
+  }
+  }
