--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,3 +5,18 @@
     display: flex;
     flex-direction: column;
   }
+
+  @media screen and (max-width: 768px) {
+    .intro {
+      margin: 88px auto 0;
+      max-width: 720px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .intro {
+      margin: 64px auto 0;
+      padding: 0 0 90px 0;
+      max-width: 288px;
+  }
+  }
