--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,15 @@
     padding: 0;
     max-width: 984px;
   }
+
+  @media screen and (max-width: 768px) {
+    .lead__image {
+      max-width: 768px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .lead__image {
+      max-width: 320px;
+  }
+  }
