--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,3 +7,18 @@
     text-align: center;
     font-weight: 400;
   }
+
+  @media screen and (max-width: 768px) {
+    .lead__subtitle {
+      margin: 32px 0 36px 0;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .lead__subtitle {
+      margin: 16px 0 40px 0;
+      width: 288px;
+      font-size: 16px;
+      line-height: 20px;
+  }
+  }
