--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,3 +7,17 @@
     font-weight: 900;
     text-align: center;
   }
+
+  @media screen and (max-width: 768px) {
+      .lead__title {
+      width: 720px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .lead__title {
+        width: 288px;
+        font-size: 40px;
+        line-height: 44px;
+    }
+  }
