--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,15 @@
     flex-direction: column;
     align-items: center;
   }
+
+  @media screen and (max-width: 768px) {
+    .lead {
+      margin: 88px 0 0 0;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .lead {
+        margin: 50px auto 0;
+    }
+  }
