--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,3 +5,15 @@
     font-family: "Inter";
     color: #ffffff;
   }
+
+  @media screen and (max-width: 768px) {
+    .page {
+        max-width: 768px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .page {
+        max-width: 320px;
+    }
+  }
