--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -11,3 +11,22 @@
   height: 460px;
   object-fit: cover;
 }
+
+@media screen and (max-width: 768px) {
+  .place__image {
+    max-width: 340px;
+  }
+
+  .place__image:last-of-type {
+    height: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__image {
+    max-width: 320px;
+    grid-row: 3;
+    grid-column: 1;
+}
+}
+
