--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -11,3 +11,10 @@
   .place__link:last-child {
     margin: 0;
   }
+
+  @media screen and (max-width: 320px) {
+    .place__link {
+      margin: 12px 0 0 0;
+      width: 288px;
+  }
+  }
