--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,3 +2,9 @@
   margin: 0 0 25px 0;
   grid-area: main;
 }
+
+@media screen and (max-width: 320px) {
+  .place__paragraph:last-child {
+    margin: 0;
+}
+}
