--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -7,3 +7,21 @@
   line-height: 29px;
   grid-row: span 3;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraphs {
+    width: 352px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraphs {
+    margin: 0 auto 0;
+    width: 288px;
+    grid-column: 1;
+    grid-row: 4;
+}
+}
