--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,3 +8,26 @@
   grid-area: header;
   grid-column: 1;
 }
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    max-width: 340px;
+    font-size: 42px;
+    font-weight: 900;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    margin: 0;
+    padding: 0;
+    font-size: 32px;
+    line-height: 35px;
+    grid-column: 1;
+    grid-row: 1;
+}
+}
