--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,3 +7,9 @@
     line-height: 14px;
     font-weight: 400;
   }
+
+  @media screen and (max-width: 320px) {
+    .place__url-heading {
+      line-height: 12px;
+  }
+  }
