--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,3 +3,16 @@
     padding: 0;
     max-width: 984px;
   }
+
+  @media screen and (max-width: 768px) {
+    .places {
+      max-width: 720px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .places {
+      max-width: 320px;
+      grid-gap: none;
+  }
+  }
