--- a/media-queries/__320/media-queries__320.css
+++ b/media-queries/__320/media-queries__320.css
@@ -1,4 +1,8 @@
 @media screen and (max-width: 320px) {
+
+    }
+
+@media screen and (max-width: 320px) {
     .page {
         max-width: 320px;
     }
