--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,12 +1,12 @@
 .button {
-    padding: 13px 20px;
-    background: #0278fe;
-    color: #ffffff;
-    text-decoration: none;
-  }
+  padding: 13px 20px;
+  background: #0278fe;
+  color: #ffffff;
+  text-decoration: none;
+}
 
-  .button:hover {
-    background-color: #0063D2;
-    transition: .2s;
-    transition-timing-function: ease-out;
-  }
+.button:hover {
+  background-color: #0063d2;
+  transition: 0.2s;
+  transition-timing-function: ease-out;
+}
