--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   max-width: 1184px;
   margin: 92px auto 0;
-  background-image: url(../../../images/background.jpg);
+  background-image: url(../../images/background.jpg);
   background-repeat: no-repeat;
   background-size: 1184px 740px;
   position: relative;
