--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,19 +1,23 @@
 .page {
-  width: 1280px;
+  max-width: 1280px;
+  min-width: 768px;
   margin: 0 auto;
   background-color: #2a2c2f;
   font-family: "Inter";
   color: #ffffff;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
   .page {
-    max-width: 768px;
+    max-width: 1280px;
+    min-width: 768px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .page {
-    max-width: 320px;
+    max-width: 768px;
+    min-width: 320px;
   }
 }
