--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid {
   margin: 0 auto 0;
   padding: 0;
-  max-width: 1184px;
+  width: 1184px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 16px;
