--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,16 +2,17 @@
   margin: 0;
   padding: 0;
   max-width: 984px;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .lead__image {
-    max-width: 768px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__image {
-    max-width: 320px;
+    max-width: 100%;
   }
 }
