--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,7 @@
 .lead {
   margin: 92px auto 0;
   padding: 0;
+  max-width: 984px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,11 +10,13 @@
 @media screen and (max-width: 768px) {
   .lead {
     margin: 88px 0 0 0;
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead {
     margin: 50px auto 0;
+    max-width: 320px;
   }
 }
