--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,5 @@
 .page {
-  max-width: 1280px;
-  min-width: 1183px;
+  max-width: 100%;
   margin: 0 auto;
   background-color: #2a2c2f;
   font-family: "Inter";
@@ -9,14 +8,12 @@
 
 @media screen and (max-width: 768px) {
   .page {
-    max-width: 1000px;
-    min-width: 768px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .page {
-    max-width: 768px;
-    min-width: 320px;
+    max-width: 100%;
   }
 }
