--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,15 +1,15 @@
 .photo-grid__item {
-  max-width: 284px;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid__item {
-    max-width: 352px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .photo-grid__item {
-    max-width: 288px;
+    max-width: 100%;
   }
 }
