--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,10 @@
 .cover {
   max-width: 1184px;
+  width: 100%;
   margin: 92px auto 0;
   background-image: url(../../images/background.jpg);
   background-repeat: no-repeat;
-  background-size: 1184px 740px;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
@@ -28,16 +29,14 @@
 @media screen and (max-width: 768px) {
   .cover {
     margin: 88px auto 0;
-    max-width: 768px;
-    background-size: 768px 746px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover {
-    max-width: 320px;
+    max-width: 100%;
     height: 254px;
     margin: 64px auto 0;
-    background-size: 320px 254px;
   }
 }
