--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 460px;
+  width: 100%;
   grid-column: 1;
   grid-row: 2;
   grid-area: image;
@@ -14,7 +15,7 @@
 
 @media screen and (max-width: 768px) {
   .place__image {
-    max-width: 340px;
+    width: 100%;
   }
 
   .place__image:last-of-type {
@@ -24,7 +25,7 @@
 
 @media screen and (max-width: 320px) {
   .place__image {
-    max-width: 320px;
+    width: 100%;
     grid-row: 3;
     grid-column: 1;
   }
