--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,8 +1,8 @@
 .place__image {
   margin: 0;
   padding: 0;
-  max-width: 460px;
-  width: 100%;
+  width: 460px;
+  height: 460px;
   grid-column: 1;
   grid-row: 2;
   grid-area: image;
