--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,5 +1,5 @@
 .place__paragraphs {
-  width: 484px;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 18px;
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraphs {
-    width: 352px;
+    width: 100%;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -20,7 +20,7 @@
 @media screen and (max-width: 320px) {
   .place__paragraphs {
     margin: 0 auto 0;
-    width: 288px;
+    width: 100%;
     grid-column: 1;
     grid-row: 4;
   }
