--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 460px;
+  width: 100%;
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
@@ -14,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    max-width: 340px;
+    width: 100%;
     font-size: 42px;
     font-weight: 900;
     line-height: 46px;
