--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,7 +1,8 @@
 .place__website {
   margin: 0;
   padding: 0;
-  width: 456px;
+  max-width: 456px;
+  width: 100%;
   grid-row: 1;
   display: flex;
   flex-direction: column;
@@ -12,7 +13,7 @@
 
 @media screen and (max-width: 768px) {
   .place__website {
-    width: 316px;
+    width: 100%;
   }
 }
 
