--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,8 @@
 .intro__text {
   margin: 0;
   padding: 0;
-  width: 690px;
+  max-width: 690px;
+  width: 100%;
 }
 
 .intro__text:nth-of-type(1) {
@@ -28,13 +29,13 @@
 
 @media screen and (max-width: 768px) {
   .intro__text {
-    width: 720px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro__text {
-    width: 288px;
+    width: 100%;
   }
 
   .intro__text:nth-of-type(1) {
