--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,6 @@
 .intro__title {
-  width: 785px;
+  max-width: 785px;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 54px;
@@ -9,13 +10,13 @@
 
 @media screen and (max-width: 768px) {
   .intro__title {
-    width: 720px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro__title {
-    width: 288px;
+    width: 100%;
     font-size: 32px;
     line-height: 35px;
   }
