--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,7 @@
   margin: 92px auto 0;
   padding: 0 0 118px 0;
   max-width: 984px;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -9,7 +10,7 @@
 @media screen and (max-width: 768px) {
   .intro {
     margin: 88px auto 0;
-    max-width: 720px;
+    width: 100%;
   }
 }
 
@@ -17,6 +18,6 @@
   .intro {
     margin: 64px auto 0;
     padding: 0 0 90px 0;
-    max-width: 288px;
+    width: 100%;
   }
 }
