--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,17 +2,18 @@
   margin: 0 auto 0;
   padding: 0;
   max-width: 984px;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .places {
-    max-width: 720px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
-    max-width: 320px;
+    width: 100%;
     grid-gap: none;
   }
 }
