more fixes to cover

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 320px) {
   .cover__subtitle {
     margin: 16px 0;
-    width: 288px;
+    width: 100%;
     grid-column: none;
     grid-row: none;
   }
