--- a/blocks/cover/__group/cover__group.css
+++ b/blocks/cover/__group/cover__group.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   padding: 243px 0;
   max-width: 656px;
+  width: 100%;
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -9,7 +10,7 @@
 
 @media screen and (max-width: 320px) {
   .cover__group {
-    max-width: 288px;
+    width: 100%;
     margin: 0 auto;
     padding: 46px 0 0 0;
     display: flex;
