--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,7 +1,8 @@
 .cover__text {
   margin: 0;
   padding: 0;
-  width: 320px;
+  max-width: 320px;
+  width: 100%;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -10,7 +11,7 @@
 @media screen and (max-width: 320px) {
   .cover__text {
     text-align: center;
-    width: 288px;
+    width: 100%;
     font-size: 14px;
     line-height: 16px;
   }
