--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,8 @@
 .cover__title {
   margin: 0;
   padding: 0;
-  width: 656px;
+  max-width: 656px;
+  width: 100%;
   grid-row: 1;
   grid-column: 2;
   font-size: 72px;
@@ -11,7 +12,7 @@
 
 @media screen and (max-width: 320px) {
   .cover__title {
-    width: 288px;
+    width: 100%;
     font-size: 32px;
     line-height: 35px;
   }
