--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,8 @@
 .lead__subtitle {
   margin: 32px 0 64px 0;
   padding: 0;
-  width: 720px;
+  max-width: 720px;
+  width: 100%;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
@@ -17,7 +18,7 @@
 @media screen and (max-width: 320px) {
   .lead__subtitle {
     margin: 16px 0 40px 0;
-    width: 288px;
+    width: 100%;
     font-size: 16px;
     line-height: 20px;
   }
