--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,8 @@
 .lead__title {
   margin: 0;
   padding: 0;
-  width: 793px;
+  max-width: 793px;
+  width: 100%;
   font-size: 96px;
   line-height: 100px;
   font-weight: 900;
@@ -10,13 +11,13 @@
 
 @media screen and (max-width: 768px) {
   .lead__title {
-    width: 720px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__title {
-    width: 288px;
+    width: 100%;
     font-size: 40px;
     line-height: 44px;
   }
