--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
   background-color: #2a2c2f;
   font-family: "Inter";
   color: #ffffff;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
