--- a/blocks/cover/__group/cover__group.css
+++ b/blocks/cover/__group/cover__group.css
@@ -5,15 +5,17 @@
   width: 100%;
   text-align: center;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 32px;
+  grid-template-columns: 2fr;
+  grid-template-areas: 
+    "title"
+    "main"
+    "button";
 }
 
 @media screen and (max-width: 495px) {
   .cover__group {
     width: 100%;
-    margin: 0 auto;
     padding: 46px 0 0 0;
-    display: flex;
-    flex-direction: column;
   }
 }
