--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,15 +1,14 @@
 .cover__subtitle {
-  margin: 32px auto;
+  margin: 0 auto;
   padding: 0;
   grid-row: 2;
   grid-column: 2;
+  grid-area: main;
 }
 
 @media screen and (max-width: 495px) {
   .cover__subtitle {
     margin: 16px 0;
     width: 100%;
-    grid-column: none;
-    grid-row: none;
   }
 }
