--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,7 +1,7 @@
 .cover__text {
   margin: 0;
   padding: 0;
-  max-width: 320px;
+  min-width: 320px;
   width: 100%;
   font-size: 18px;
   font-weight: 400;
