--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,22 +1,20 @@
 .page {
   max-width: 1280px;
-  min-width: 1183px;
+  width: 100%;
   margin: 0 auto;
   background-color: #2a2c2f;
   font-family: "Inter";
   color: #ffffff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
   .page {
-    max-width: 1000px;
-    min-width: 768px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .page {
-    max-width: 768px;
-    min-width: 320px;
+    width: 100%;
   }
 }
