--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,7 @@
   padding: 0;
   display: grid;
   grid-gap: 48px 40px;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "header header"
     "image main"
