--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -30,7 +30,7 @@
     margin: 48px 0;
     padding: 0;
     grid-gap: 30px;
-    grid-template-columns: 1fr;
+    grid-template-columns: 16px 1fr 16px;
     grid-template-areas:
       "header"
       "header"
