--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,8 +3,8 @@
   padding: 0 0 118px 0;
   max-width: 984px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 24px 1fr 24px;
 }
 
 @media screen and (max-width: 768px) {
