--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -9,7 +9,7 @@
   }
 }
 
-@media screen and (max-width: 495x) {
+@media screen and (max-width: 495px) {
   .photo-grid__item {
     max-width: 100%;
   }
