html & readme fix from reviewer

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,10 +4,22 @@
   grid-row: 2;
   grid-column: 2;
   grid-area: main;
+  max-width: 218px;
+  width: 100%;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
+  
+  
 }
 
 @media screen and (max-width: 495px) {
   .cover__subtitle {
     width: 100%;
+    max-width: 171px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 16px;
   }
 }
