--- a/pages/index.css
+++ b/pages/index.css
@@ -13,6 +13,8 @@
 
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__quote/intro__quote.css);
+@import url(../blocks/intro/__quote-author/intro__quote-author.css);
 @import url(../blocks/intro/__text/intro__text.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
