--- a/blocks/cover/__group/cover__group.css
+++ b/blocks/cover/__group/cover__group.css
@@ -5,7 +5,7 @@
   width: 100%;
   text-align: center;
   display: grid;
-  grid-gap: 32px;
+  gap: 32px;
   grid-template-columns: 2fr;
   grid-template-areas: 
     "title"
@@ -15,8 +15,7 @@
 
 @media screen and (max-width: 495px) {
   .cover__group {
-    grid-gap: 16px;
-    width: 100%;
+    gap: 16px;
     padding: 46px 0 0 0;
   }
 }
