--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -29,14 +29,13 @@
 @media screen and (max-width: 768px) {
   .cover {
     margin: 88px auto 0;
-    width: 100%;
   }
 }
 
 @media screen and (max-width: 495px) {
   .cover {
     max-width: 100%;
-    height: 254px;
+    min-height: 254px;
     margin: 64px auto 0;
   }
 }
