--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,19 +2,7 @@
   max-width: 100%;
   margin: 0 auto;
   background-color: #2a2c2f;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   color: #ffffff;
   box-sizing: border-box;
-}
-
-@media screen and (max-width: 768px) {
-  .page {
-    max-width: 100%;
-  }
-}
-
-@media screen and (max-width: 495px) {
-  .page {
-    max-width: 100%;
-  }
 }
