--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,14 +5,13 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 16px;
+  gap: 16px;
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
-    grid-gap: 16px;
   }
 }
 
@@ -20,6 +19,6 @@
   .photo-grid {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr);
-    grid-gap: 12px;
+    gap: 12px;
   }
 }
