--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -6,6 +6,7 @@
   font-size: 12px;
   line-height: 14px;
   font-weight: 400;
+  letter-spacing: .12em;
 }
 
 @media screen and (max-width: 495px) {
