--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   max-width: 1184px;
   width: 100%;
-  margin: 92px auto 0;
+  margin: 44px auto 0;
   background-image: url(../../images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -28,7 +28,9 @@
 
 @media screen and (max-width: 768px) {
   .cover {
-    margin: 88px auto 0;
+    margin: 40px auto 0;
+    min-height: 746px;
+    object-fit: cover;
   }
 }
 
