--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,10 +6,12 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
+    padding: 0 24px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, 1fr);
   }
@@ -17,6 +19,7 @@
 
 @media screen and (max-width: 495px) {
   .photo-grid {
+    padding: 0 16px;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr);
     gap: 12px;
